@@ -5,6 +5,6 @@ DIST mplayer2-2.0_p20111126.tar.xz 3334504 RMD160 8fb6dc468cc754a87589ff5099c7ee
 DIST mplayer2-2.0_p20120309.tar.xz 3328620 RMD160 b8ba6666cc77f3f74e100a843246114c17b06703 SHA1 35465ec3ca1c8196be3aa9938b72261dcb1f1718 SHA256 8a46e0be27dd479c91bde64a35725c6ff668e5a74ab3a56ac3fe29d16f6a0a31
 EBUILD mplayer2-2.0_p20111126.ebuild 16579 RMD160 f8c9ad8b677fc57e13ee6f445126772cc63063b6 SHA1 f353339c53fd0bb18789cc070bafcaa3fce15a4d SHA256 e7377bb48f2966166185401a13fae7ae9bbd1c0d1c8c749645fb11c145e5311c
 EBUILD mplayer2-2.0_p20120309.ebuild 16621 RMD160 2a5e870a7125581797d8f11194e31ce2735616a4 SHA1 89f589e50ebdf872fc362aee6c9e2f61c633430d SHA256 a2de2cfe08176ababfd1ac4089854afb4e9d036923e286091187d67dc70c6e4f
-EBUILD mplayer2-9999.ebuild 16605 RMD160 39a6649ede4a3182756796bb9833f94707fe03c3 SHA1 c105abfa7abddd89ae0020198d6e593b410ef6f1 SHA256 d36385be6a285c74d9a6ed1d2f97a98d614475b4528667e0e10588976abde61d
-MISC ChangeLog 5947 RMD160 b53038c6141927c6e41b444d9a9d4aaea9bd8081 SHA1 dfbf4635c540a20f8909a6919082c61052908cc8 SHA256 3eb54398c01b98f77a17142b4e1ac0d8fc00f03421be925c0cf728e843e4811a
+EBUILD mplayer2-9999.ebuild 16451 RMD160 7a5748ad24e40e0d28b0deea7e47a9dc792fb34f SHA1 4695f887706a7b95e858010ac77bef586bcdef75 SHA256 cddae8cb0a2254b558f927e1ed52991c4529bb7609c97847e5bb8a39dddb1170
+MISC ChangeLog 6055 RMD160 3319c1fbbef3fd4a20c038626d50dc5f371989d9 SHA1 b8d558a09622114c93cb31c00637390c069ba567 SHA256 85a997c3b187c2801e256bd99f640feb47fe0a75ff38eb9e79cfd266403135ef
 MISC metadata.xml 4045 RMD160 1164dbcf2589db4faf609c819592fffa88489ded SHA1 edb3a67eb6246e3e190810cbf7d118b23919bcd5 SHA256 13e5f9cb420b9160e7e4ae091d0ef57fe53bcdb7b10b9c873be8331312c1faa7
