@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Apr 2012; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild:
+  upstream removed support for cdparanoia
+
   24 Apr 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120309.ebuild,
   mplayer2-9999.ebuild:
   sync with portage, remove "--disable-kai", thanks to nfk
